<resources>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_download">Download</string>
    <string name="menu_upload">Upload</string>
    <string name="menu_reports">View Report</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_new_market_demo">New Market Demo</string>
    <string name="menu_update_existing_demo">Update existing demo</string>
    <string name="upload_new_market_demo">Upload New Market Demo [0]</string>
    <string name="upload_update_existing_demo">Upload Updated Existing Demo [0]</string>
    <string name="enter_emp_code">Enter Employee Code</string>
    <string name="enter_pass">Enter Password</string>
    <string name="register">Register New User</string>
    <string name="forgot_pass">Forgot Password</string>
    <string name="enter_pass_set">Set Password</string>
    <string name="register_rg">Register</string>
    <string name="e_sign">E-Sign</string>
    <string name="reset_pass">Reset Password</string>
    <string name="skip_login">Skip Login</string>
    <string name="digital_agreement">Digital Agreement</string>
    <string name="download_cmr_data">Download CMR Data</string>
    <string name="field_area_tagging">Field Area Tagging</string>
    <string name="cmr_entry">CMR Entry</string>
    <string name="cmr_validation">CMR Validation</string>
    <string name="cmr_update">CMR Update</string>
    <string name="data_upload_sync">Data Upload/Sync</string>
    <string name="grower_info">Grower Info</string>
    <string name="grower_issue">Grower Issues</string>
    <string name="my_travel">My Travel</string>
    <string name="be_voice_of_grower">BE - Voice of Grower</string>
    <string name="voct">VOCT</string>
    <string name="proceed">Proceed</string>
    <string name="no_internet">No Internet</string>
    <string name="select_season">Please Select Year with season</string>
    <string name="select_center">"Select center "</string>
    <string name="select_vender">Select Vendor</string>
    <string name="select_product">Select Product</string>
    <string name="get_details">Get Details</string>
    <string name="btn_download_data">Download Data</string>
    <string name="download_data">Download Data</string>
    <string name="enter_staff_code">Enter Staff Code</string>
    <string name="enter_tfa_code">Enter TFA Code</string>
    <string name="download_survey_gw">Download Survey Grower</string>
    <string name="next">Next</string>
    <string name="upload_success">Data Uploaded Successfully</string>
    <string name="saved_to_db">Data Saved to Database Successfully</string>
    <string name="no_providers">No providers available to show.</string>
    <string name="wrong_authority">FileProvider not declared or has wrong authority. (Must be ${applicationId}.com.mahyco.cmr_app.provider, check your AndroidManifest.xml)</string>
    <string name="activity_destroyed">Activity was destroyed, can\'t handle pick image result.</string>
    <string name="gallery_app_not_found">Gallery app not found.</string>
    <string name="loading">Loading...</string>
    <string name="choose">Choose</string>
    <string name="camera">Camera</string>
    <string name="cancel">Cancel</string>
    <string name="menu_testdata">Test Data</string>
    <string name="pendingdownload">Pending / Download</string>
    <string name="menu_pending_actions">Pending Actions</string>
    <string name="trial_code">Trial Code</string>
    <string name="year">Year</string>
    <string name="segment">Segment</string>
    <string name="md_hybrid">MD Hybrid</string>
    <string name="zone">Zone</string>
    <string name="state">State</string>
    <string name="kit_size">Kit Size</string>
    <string name="status">Status</string>
    <string name="Label">Label</string>
    <string name="action">Action</string>
    <string name="target_market">Target Market/District Location</string>
    <string name="sample_kit">Sample Kit Size(in grams)</string>
    <string name="asign_to">Assign to</string>
    <string name="blocktaluka">Block / Taluka</string>
    <string name="farmername">Farmer Name</string>
    <string name="farmer_mo_no">Farmer Mobile No.</string>
    <string name="farmer_wa_no">Farmer Whatsapp No.</string>
    <string name="md_hybrid_name">Market Demo Hybrid Name</string>
    <string name="check_hybrid_name">Check Hybrid Name</string>
    <string name="check_hybrid_company">Check Hybrid Company</string>
    <string name="dos">DOS</string>
    <string name="dos_full">Date of Sowing(DOS)</string>
    <string name="dos_underline"><u>Date of Sowing(DOS)</u></string>
    <string name="geo_tagging">Geo Tagging (only if you are in the field)</string>
    <string name="geo_tagging_underline"><u>Geo Tagging (only if you are in the field)</u></string>
    <string name="option">Option</string>
    <string name="namehybrid">Name of Hybrid</string>
    <string name="checkhybrid">Check Hybrid</string>
    <string name="compaycheckhybrid">Company of Check Hyb</string>
    <string name="demo_quantity">Demo quantity (g)</string>
    <string name="uniqueSrNo">UniqueSrNo</string>
    <string name="MDDispatchSegmetnId">MDDispatchSegmetnId</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="app_name">MIPL Production</string>
    <string name="logout">Logout</string>
    <string name="logout_msg">Are you sure you want to logout?</string>
    <string name="permission_string">You have forcefully denied some of the required permissions for this action. Please open settings, go to permissions and allow them.</string>
    <string name="went_wrong">Something went wrong.</string>
    <string name="server_error">Server error please try again</string>
    <string name="err_internet">Please check your internet connection!</string>
    <string name="err_request_timeout">Request Timeout!</string>
    <string name="err_common">Please try again!</string>
    <string name="login">Login</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="version_code"> Version No: %s</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="sign_in_to_your_account">Sign in to your account</string>
    <string name="new_user_registration">User\nRegistration</string>
    <string name="staff_name">Staff Name</string>
    <string name="staff_id">Staff Id</string>
    <string name="mobile_no">Mobile No.<font color='#FF0000'>*</font></string>
    <string name="confirm_password">Confirm Password</string>
    <string name="submit">Submit</string>
    <string name="Please_enter_user_name">Please enter user name</string>
    <string name="Please_enter_password">Please enter password</string>
    <string name="Please_enter_staff_name">Please enter staff name</string>
    <string name="Please_enter_staff_id">Please enter staff id</string>
    <string name="Please_enter_mobile_no">Please enter mobile no.</string>
    <string name="Please_enter_unique_code">Please enter unique code</string>
    <string name="Please_enter_national_id_number">Please enter National ID Number</string>
    <string name="Please_enter_valid_national_id_number">Please enter 16 digit National ID Number</string>
    <string name="Please_enter_valid_national_id_number_malawi">Please enter 8 characters National ID</string>
    <string name="Please_enter_confirm_password">Please enter confirm password</string>
    <string name="password_confirm_password_not_match">Your password and confirmation password do not match.</string>
    <string name="Please_select_country">Please select country</string>
    <string name="Please_select_district">Please select district</string>
    <string name="Please_select_epa_ward">Please select EPA (Ward)</string>
    <string name="Please_select_section">Please select section</string>
    <string name="Please_select_village">Please select village</string>
    <string name="Please_select_province">Please select province</string>
    <string name="Please_select_region">Please select region</string>
    <string name="Please_select_planting_year">Please select planting year</string>
    <string name="Please_enter_landmark">Please enter landmark</string>
    <string name="Please_enter_farmer_name">Please enter farmer name</string>
    <string name="Please_select_gender">Please select gender</string>
    <string name="Please_enter_date_of_birth">Please enter date of birth</string>
    <string name="please_wait">Please wait.....</string>
    <string name="empty_device_id">Empty device id</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="enter_email_address">Enter email address</string>
    <string name="Please_enter_email_address">Please enter email address</string>
    <string name="Please_enter_valid_email_address">Please valid enter email address</string>
    <string name="new_grower_registration">New Grower Registration</string>
    <string name="new_organizer_registration">New Coordinator Registration</string>
    <string name="download_parent_seed_stock">Download Parent Seed Stock</string>
    <string name="parent_seed_distribution">Parent Seed Distribution</string>
    <string name="download_grower_list">Download Grower List</string>
    <string name="home">Home</string>
    <string name="country">Country<font color='#FF0000'>*</font></string>
    <string name="region">Region<font color='#FF0000'>*</font></string>
    <string name="province">ADD (Province)<font color='#FF0000'>*</font></string>
    <string name="district">District<font color='#FF0000'>*</font></string>
    <string name="epa">EPA (Ward)<font color='#FF0000'>*</font></string>
    <string name="section">Section<font color='#FF0000'>*</font></string>
    <string name="village">Village<font color='#FF0000'>*</font></string>
    <string name="landmark">Landmark<font color='#FF0000'>*</font></string>
    <string name="enter_landmark">Enter Landmark</string>
    <string name="farmer_name">Farmer Name<font color='#FF0000'>*</font></string>
    <string name="grower_name">Grower Name<font color='#FF0000'>*</font></string>
    <string name="production_code">Production Code<font color='#FF0000'>*</font></string>
    <string name="user_registration">User Registration</string>
    <string name="save">Save</string>
    <string name="issued_seed_area_ha">Issued Seed area (Ha:)<font color='#FF0000'>*</font></string>
    <string name="optional_field_visit_no">Optional Field Visit No.<font color='#FF0000'>*</font></string>
    <string name="crop_stage">Crop Stage<font color='#FF0000'>*</font></string>
    <string name="reason_for_optional_visit">Reason for Optional Visit<font color='#FF0000'>*</font></string>
    <string name="enter_reason_for_optional_visit">Enter Reason for Optional Visit</string>
    <string name="recommendations_and_observations">Recommendations and Observations<font color='#FF0000'>*</font></string>
    <string name="date_of_field_visit">Date of field visit<font color='#FF0000'>*</font></string>
    <string name="geotag_of_location">Geotag of location<font color='#FF0000'>*</font></string>
    <string name="user_id">User Id</string>
    <string name="existing_area_ha">Existing Area (Ha)<font color='#FF0000'>*</font></string>
    <string name="growers_mobile_nos">Growers Mobile No.</string>
    <string name="recommendations_and_observationss">Recommendations and Observations</string>
</resources>